Fix stretch of round profile picture, add/edit cocktail form layout and dropdown menu and add category names

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -485,6 +485,7 @@ footer a:hover{
     height: 200px;
     width: 200px;
     display: block;
+    object-fit: cover;
 }
 
 .profile-info p {
